--- a/src/plove/ChangeLog
+++ b/src/plove/ChangeLog
@@ -1,8 +1,12 @@
+2004-09-08  Andras Varga
+
+        * widgets.tcl: updated Tcl/Tk version check
+
 2004-07-22  ------ omnetpp-3.0a6 released ------
 
 2004-06-07  ------ omnetpp-3.0a5 released ------
 
 2004-05-31  Andras Varga
 
-	* Plove internals rewritten from scratch.
+        * Plove internals rewritten from scratch.
 
