--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,6 @@
+FIXME NED file, dynamic loading, par=false in NED causes "cannot convert D to ..."
+cnednetworkbuilder.cc#817
+
 2004-07-22  ------ omnetpp-3.0a6 released ------
 
 2004-06-24
